# splice

./: .gitattributes  .gitignore  .golangci.yml  .mise.toml  CLAUDE.md  Cargo.toml  README.md  TEST_REPORT.md  demo.tape  go.mod  go.sum  main.go  main_test.go  model.go  progress.txt  run-tape  test.tape  time_now_check_test.go  update.go  view.go
.claude/commands/: sdd-1-clarify.md  sdd-2-design.md  sdd-3-implement.md
.claude/hooks/: session-start.sh  setup-devtools.sh  setup-go.sh
.githooks/: pre-commit
.github/: dependabot.yml  pull_request_template.md
.github/workflows/: ci.yml
cmd/test-app/: main.go
docs/adr/: adr-001-technology-stack.md  adr-003-git-package-restructuring.md
docs/guidelines/: pull-request-guidelines.md  testing-guidelines.md  testing.md
docs/spec/: 260220-multiselect.md  270220-direct-diff.md
e2e/: basic_navigation_test.go  error_state_test.go  helpers_test.go  viewport_scrolling_test.go  window_resize_test.go
go/: CLAUDE.md  go.mod
go/sandbox/: docker-compose.yml.template
internal/app/: accessors.go  factory.go  factory_test.go  messages.go  model.go  model_navigation_test.go  (+4 more)
rust/: ARCHITECTURE.md  CLAUDE.md  Cargo.toml
sandbox/: CLAUDE.md  Dockerfile  SECURITY-REVIEW.md  SECURITY.md  docker-compose.yml  docker-compose.yml.template  kind-config.yaml  run.sh  sandbox  sandbox.sh  secrets.env.example  stop.sh  template-claude.json
src/: input.rs  lib.rs  main.rs
testdata/: TestBasicNavigation.golden  TestEmptyRepository.golden  TestErrorState.golden  TestQuitWithCtrlC.golden  TestViewportScrolling.golden  TestWindowResize.golden
tests/: tests.rs
(+766 files in other folders)
