[package]
name = "splice"
version = "0.1.0"
edition = "2021"

[dependencies]
ratatui = "0.30"
crossterm = "0.29"
chrono = "0.4"
terminal-colorsaurus = "1.0"
tree-sitter = "0.26"
tree-sitter-highlight = "0.26"
tree-sitter-rust = "0.24"
tree-sitter-javascript = "0.25"
tree-sitter-typescript = "0.23"
tree-sitter-python = "0.25"
tree-sitter-go = "0.25"
tree-sitter-json = "0.24"
tree-sitter-yaml = "0.7"
tree-sitter-toml-ng = "0.7"
tree-sitter-c = "0.24.1"
tree-sitter-cpp = "0.23.4"
tree-sitter-java = "0.23.5"
tree-sitter-kotlin-sg = "0.4.0"
tree-sitter-swift = "0.7.1"
tree-sitter-php = "0.24.2"
tree-sitter-ruby = "0.23.1"
tree-sitter-lua = "0.5.0"
tree-sitter-bash = "0.25.1"
tree-sitter-html = "0.23.2"
tree-sitter-css = "0.25.0"
tree-sitter-make = "1.1.1"
tree-sitter-md = "0.5.3"
tree-sitter-c-sharp = "0.23.1"
tree-sitter-hcl = "1.1.0"
octorus-tree-sitter-vue3 = "0.1.0"
tree-sitter-svelte-next = "0.1.1"
textwrap = "0.16"
unicode-width = "0.2"

[dev-dependencies]
tempfile = "3"
serial_test = "3"
